objects/Contract_Renewal_History__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Contract_ACV__c</fullName>
        <label>Annual Contract ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Professional_Services_Rev__c</fullName>
        <label>Annual Professional Services Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Software_Rev__c</fullName>
        <label>Annual Software Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Score__c</fullName>
        <label>Contract Score</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term_End_Date__c</fullName>
        <label>Contract Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Start_Date__c</fullName>
        <label>Contract Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Term</fullName>
                    <default>true</default>
                    <label>Initial Term</label>
                </value>
                <value>
                    <fullName>Renewal Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contract_id__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Renewal History</relationshipLabel>
        <relationshipName>Contract_Renewal_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Renewal History</label>
    <nameField>
        <label>Contract Renewal History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Renewal History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>